--- a/hw/templates/notice_new.html
+++ b/hw/templates/notice_new.html
@@ -31,7 +31,7 @@
 
                         <div class="custom-file mb-3">
                             <input type="file" class="custom-file-input" id="notice_file" name="notice_file" multiple>
-                            <label class="custom-file-label text-left" for="notice_file">첨부파일을 선택하세요.</label>
+                            <label class="custom-file-label text-left" for="notice_file">첨부파일을 선택하세요. 안녕하세요. </label>
                         </div>
                         {% if user.is_superuser == True %}
                         <input type="submit" class="btn btn-primary" value="공지사항 추가" onclick="submit_btn()">
