--- a/hw/templates/notice_new.html
+++ b/hw/templates/notice_new.html
@@ -15,23 +15,23 @@
                     {% csrf_token %}
                     <div class="jumbotron">
                         <div class="form-group">
-                            <label class="mb-3" for="title" name="title">제목</label>
-                            <input type="text" class="form-control is-invalid" id="title" placeholder="제목을 입력해주세요."
+                            <label class="mb-3">제목</label>
+                            <input type="text" class="form-control is-invalid" name="title" placeholder="제목을 입력해주세요."
                                 required>
                         </div>
                         <div class="form-group">
-                            <label class="mb-3" for="content" name="content">내용</label>
-                            <textarea class="form-control is-invalid" id="validationTextarea" placeholder="내용을 입력해주세요."
+                            <label class="mb-3">내용</label>
+                            <textarea class="form-control is-invalid" name="content" placeholder="내용을 입력해주세요."
                                 cols="30" rows="10" required></textarea>
                         </div>
                         <div class="form-group">
-                            <label class="mb-3" for="end_date" name="end_date">마감일</label>
-                            <input class="" type="date" name="end_date">
+                            <label class="mb-3">마감일</label>
+                            <input class="w-100" type="date" name="end_date">
                         </div>
 
                         <div class="custom-file mb-3">
-                            <input type="file" class="custom-file-input" id="notice_file" name="notice_file" multiple>
-                            <label class="custom-file-label text-left" for="notice_file">첨부파일을 선택하세요. 안녕하세요. </label>
+                            <input type="file" class="custom-file-input" name="notice_file" multiple>
+                            <label class="custom-file-label text-left">첨부파일을 선택하세요.</label>
                         </div>
                         {% if user.is_superuser == True %}
                         <input type="submit" class="btn btn-primary" value="공지사항 추가" onclick="submit_btn()">
@@ -39,7 +39,7 @@
                     </div>
                 </form>
             </div>
-            
+<!--             
             <form action="{% url 'notice_new' %}" method="POST" enctype="multipart/form-data" name="edit" id="edit">
                 <div class="jumbotron">
                     {% csrf_token %}
@@ -58,7 +58,7 @@
             </form>
         </div>
     </div>
-    </div>
+    </div> -->
 
     <script>
         function submit_btn() {
