--- a/hw/templates/notice_new.html
+++ b/hw/templates/notice_new.html
@@ -3,26 +3,26 @@
 
 {% block link %}{% static 'hw/css/hw_main.css' %}{% endblock %}
 {% block title %}공지사항 작성{% endblock %}
-{% block content%}
+{% block content %}
 
-<body>
+    <body>
     <div id="page-wrapper">
         <div id="featured" class="container">
             <div class="title">
                 <h2>공지사항 작성</h2>
                 <form class="was-validated" action="{% url 'notice_new' %}" method="POST" enctype="multipart/form-data"
-                    name="edit" id="edit">
+                      name="edit" id="edit">
                     {% csrf_token %}
                     <div class="jumbotron">
                         <div class="form-group">
                             <label class="mb-3">제목</label>
                             <input type="text" class="form-control is-invalid" name="title" placeholder="제목을 입력해주세요."
-                                required>
+                                   required>
                         </div>
                         <div class="form-group">
                             <label class="mb-3">내용</label>
                             <textarea class="form-control is-invalid" name="content" placeholder="내용을 입력해주세요."
-                                cols="30" rows="10" required></textarea>
+                                      cols="30" rows="10" required></textarea>
                         </div>
                         <div class="form-group">
                             <label class="mb-3">마감일</label>
@@ -30,16 +30,17 @@
                         </div>
 
                         <div class="custom-file mb-3">
-                            <input type="file" class="custom-file-input" name="notice_file" multiple>
-                            <label class="custom-file-label text-left">첨부파일을 선택하세요.</label>
+                            <input type="file" class="custom-file-input" name="notice_file" multiple
+                                   onchange="fileSelect()">
+                            <label class="custom-file-label text-left" id="noticeFileLabel">첨부파일을 선택하세요.</label>
                         </div>
                         {% if user.is_superuser == True %}
-                        <input type="submit" class="btn btn-primary" value="공지사항 추가" onclick="submit_btn()">
+                            <input type="submit" class="btn btn-primary" value="공지사항 추가" onclick="submit_btn()">
                         {% endif %}
                     </div>
                 </form>
             </div>
-<!--             
+            <!--
             <form action="{% url 'notice_new' %}" method="POST" enctype="multipart/form-data" name="edit" id="edit">
                 <div class="jumbotron">
                     {% csrf_token %}
@@ -60,16 +61,28 @@
     </div>
     </div> -->
 
-    <script>
-        function submit_btn() {
-            var check_date = document.edit.submitdate.value;
-            if (check_date == "") {
-                alert("마감일을 입력해주세요");
-            } else {
-                alert("공지가 등록되었습니다.");
-                document.getElementById('edit').submit();
-            }
-        }
-    </script>
-</body>
+            <script>
+                function submit_btn() {
+                    var check_date = document.edit.submitdate.value;
+                    if (check_date == "") {
+                        alert("마감일을 입력해주세요");
+                    } else {
+                        alert("공지가 등록되었습니다.");
+                        document.getElementById('edit').submit();
+                    }
+                }
+
+                const fileSelect = () => {
+                    const fileElement = document.getElementsByName('notice_file')[0]
+                    const files = fileElement.files
+                    const label = document.getElementById('noticeFileLabel')
+                    let selectedFileName = ''
+                    for (let file of files) {
+                        selectedFileName += `${file.name}, `
+                    }
+                    selectedFileName = selectedFileName.substring(0, selectedFileName.length - 2)
+                    label.innerText = selectedFileName
+                }
+            </script>
+    </body>
 {% endblock %}
