--- a/page/templates/base.html
+++ b/page/templates/base.html
@@ -44,10 +44,11 @@
                 <a class="nav-item nav-link " href="{% url 'home' %}">
                     Home </a>
                 <a class="nav-item nav-link " href="{% url 'introduce' %}">Introduce</a>
-                <a class="nav-item nav-link " href="{% url 'homeworklist' %}">Homework</a>
+                <a class="nav-item nav-link " href="{% url 'hw_main' %}">Homework</a>
                 <a class="nav-item nav-link " href="{% url 'QnA' %}">QnA</a>
-                <a class="nav-item nav-link " href="{% url 'hw_main' %}">과제제출(new)</a>
-                <a class="nav-item nav-link " href="{% url 'main' %}">과제관리(new)</a>
+                    {% if user.is_superuser == True %}
+                        <a class="nav-item nav-link " href="{% url 'main' %}">관리</a>
+                    {% endif %}
                 {% else %}
                 <a class="nav-item nav-link " href="{% url 'home' %}">
                     Home </a>
