--- a/page/static/page/css/base.css
+++ b/page/static/page/css/base.css
@@ -20,8 +20,8 @@ nav.navbar a {
         background: linear-gradient(90deg, rgba(184,137,145,1) 0%, rgba(60,118,145,1) 50%, rgba(204,154,119,1) 100%);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
-        font-weight: bold !important;
-        font-size: 25px, !important;
+        font-weight: bold;
+        font-size: 1.5rem;
     }
 
     nav.navbar a.nav-item.nav-link, nav.navbar a.nav-item.nav-link {
@@ -29,17 +29,17 @@ nav.navbar a {
     }
 
 .nav-item{
-    font-size: 15px !important;
+    font-size: 1rem !important;
 }
     
-    .nav-item.user{
-        margin-left: calc(100%/1.7) !important;
-        color: white;
-        font-size: 15px !important;
+    .user{
+        /* margin-left: calc(100%/1.7) !important; */
+        color: white !important;
+        font-size: 1rem !important;
     }
 
     .nav-item.nav-link.ml-auto{
-        font-size: medium;
+        font-size: 1rem;
         color:rgb(180, 179, 179);
     }
 
