--- a/page/static/page/css/base.css
+++ b/page/static/page/css/base.css
@@ -3,12 +3,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap");
+@import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
 
-/* nav */
-
-body{
+body, section, nav{
     font-family: "Noto Sans KR", sans-serif;
 }
+
+/* nav */
 
 nav.navbar a {
     color:rgb(180, 179, 179);
