--- a/account/static/account/css/login.css
+++ b/account/static/account/css/login.css
@@ -63,7 +63,7 @@ input {
   font-weight: bold;
 }
 
-input:focus {
+input:focus, :hover{
   outline-color: rgba(0,0,0);
   background: rgba(255,255,255,.95);
   color: #721d8bbd;
