--- a/stacklion/static/stacklion/css/QnA.css
+++ b/stacklion/static/stacklion/css/QnA.css
@@ -31,13 +31,13 @@
   background-image: linear-gradient(135deg, #FD6585 10%, #0D25B9 100%);
   padding: 35px 20px;
   font-family: 'Noto Sans KR', sans-serif;
-  font-weight: bolder;
+  font-weight: bolder !important;
 }
 
 h2,
 h4 {
   font-family: 'Noto Sans KR', sans-serif;
-  font-weight: bolder;
+  font-weight: 900 !important;
 }
 
 .shell-body {
@@ -58,6 +58,11 @@ h4 {
 }
 
 /* make adjustments some stuff */
+div.QuestionFiles{
+  font-size: 12px;
+  color: rgb(151, 151, 151);
+  font-weight: lighter;
+}
 div.answer_form {
   border: 1px solid rgb(179, 179, 179);
   margin-bottom: 15px;
@@ -71,8 +76,9 @@ div.answer_form {
 
 div.QuestionContent {
   width: fit-content;
-  font-size: 15px;
+  font-size: 16px;
   width: 93%;
+  font-weight: 400;
 }
 button {
   text-align: center;
@@ -143,8 +149,8 @@ a.QuestionPubDate {
 
 a.QuestionFiles {
   color: rgb(151, 151, 151);
-  font-size: 13px;
-  font-weight: 300;
+  font-size: 10px;
+  font-weight: 100 !important;
 }
 
 textarea.answer {
@@ -177,7 +183,7 @@ textarea.answer {
   line-height: 1;
   text-transform: none !important;
   font-family: 'Font Awesome 5 Free';
-  font-weight: 400;
+  font-weight: 100;
 }
 
 .icon>.label {
@@ -189,7 +195,7 @@ textarea.answer {
 }
 
 .icon.solid:before {
-  font-weight: 500 !important;
+  font-weight: 100 !important;
 }
 
 .icon.brands:before {
@@ -254,7 +260,7 @@ textarea.answer {
   line-height: 1;
   text-transform: none !important;
   font-family: 'Font Awesome 5 Free', 'Font Awesome 5 Brands';
-  font-weight: 300;
+  font-weight: 100;
 }
 
 .icon.major:before {
