--- a/hw/templates/hw_main.html
+++ b/hw/templates/hw_main.html
@@ -36,15 +36,15 @@
                 </thead>
                 <tbody>
                     {% for h in homeworks.all reversed %}
-                    <tr id="clickable_div" onclick="location.href='{% url 'detail' h.id %}'" style="cursor:pointer;">
+                    <tr id="clickable_div{{ h.id }}" onclick="location.href='{% url 'detail' h.id %}'" style="cursor:pointer;">
                         <th scope="row">{{ h.id }}</th>
                         <td>{{ h.title }}</td>
                         <th scope="row">{{ h.end_date }}</th>
                         <td>
                             {% if h.is_past_due %}
-                            제출마감
+                                제출마감
                                 <script type="text/javascript">
-                                    $('#clickable_div').removeAttr('onclick');
+                                    $('#clickable_div'+{{ h.id }}).removeAttr('onclick');
                                 </script>
                             {% else %}
                             진행중
