--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -15,7 +15,7 @@
         {% csrf_token %}
         <h2><span class="entypo-login"><i class="fa fa-sign-in"></i></span> Login</h2>
         <span class="entypo-user inputUserIcon"><i class="fa fa-user"></i></span>
-        <input type="email" name="email" class="user" placeholder="E-mail Address"/>
+        <input type="email" name="email" class="" placeholder="E-mail Address"/>
         <span class="entypo-key inputPassIcon"><i class="fa fa-key"></i></span>
         <input type="password" name="password" class="password" placeholder="Password"/>
         {#        <div style="height: 10px"></div>#}
