--- a/hw/static/hw/css/hw_main.css
+++ b/hw/static/hw/css/hw_main.css
@@ -7,7 +7,7 @@
 	{
 		margin: 0px;
 		padding: 0px;
-		background: #4C5748;
+		/* background: #4C5748; */
 		font-family: 'Source Sans Pro', sans-serif;
 		font-size: 12pt;
 		font-weight: 300;
